add update customer
finnally i back to work on my own project
