# app/Http/Requests/Api/UpdateCustomerRequest.php
@@ -4,7 +4,7 @@ namespace App\Http\Requests\Api;
 
 use Illuminate\Foundation\Http\FormRequest;
 
-class RegisterRequest extends FormRequest
+class UpdateCustomerRequest extends FormRequest
 {
     /**
      * Determine if the user is authorized to make this request.
@@ -28,20 +28,20 @@ class RegisterRequest extends FormRequest
                 'min:10',
                 'max:10',
                 'regex:/^(091|092|093|094)\d{7}$/',
-                'unique:customers,phone',
+                'unique:customers,phone,' . $this->route('customer')->id
             ],
+
             'backup_phone' => [
-                'nullable',
-                'string',
-                'min:10',
-                'max:10',
+                'nullable' ,
+                'string'  ,
+                'min:10' ,
+                'max:10' ,
                 'regex:/^(091|092|093|094)\d{7}$/',
-                'unique:customers,backup_phone',
+                'unique:customers,backup_phone,' . $this->route('customer')->id
             ],
-            'first_name'   => 'required|string|max:255',
-            'last_name'    => 'required|string|max:255',
-            'email'        => 'nullable|email|unique:customers,email',
-            'password'     => 'required|string|min:8|confirmed',
+            'first_name' => 'required|string|max:255',
+            'last_name'  => 'required|string|max:255',
+            'email'      => 'nullable|email|unique:customers,email,' . $this->customer->id,
         ];
     }
 }
