# routes/api.php
@@ -8,15 +8,12 @@ Route::get('/test', function () {
 });
 
 
-Route::prefix('customer')->as('api.customer.')->group(function () {
-
+Route::prefix('customers')->as('api.customer.')->group(function () {
         Route::post('/login', [AuthController::class, 'login'])->name('login');
         Route::post('/register', [AuthController::class, 'register'])->name('register');
-;
 
-
-    Route::middleware('auth:sanctum')->group(function () {
-        Route::post('/logout', [AuthController::class, 'logout'])->name('logout');
-    });
-
+        Route::middleware('auth:sanctum')->group(function () {
+            Route::put('/{customer}/edit', [AuthController::class, 'update'])->name('update');
+            Route::post('/logout', [AuthController::class, 'logout'])->name('logout');
+        });
 });
